--- a/links.html
+++ b/links.html
@@ -1,3 +1,6 @@
 <a href="http://www.google.com"> Google </a> <br>
 <a href="https://github.com/about"> Github</a> <br>
 <a href="https://assets-cdn.github.com/images/modules/about/about-header.jpg"> Github Header Photo</a>
+
+<a href="about.html"> About </a> 
+         
